[gd_scene load_steps=9 format=3 uid="uid://c8s6x0upyixn2"]

[ext_resource type="Shader" uid="uid://cuoxqt021m23q" path="res://assets/shaders/balala_fire_shader.gdshader" id="1_2jqea"]
[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/themes/windows_95_theme.tres" id="1_38tc7"]
[ext_resource type="Script" uid="uid://b0c08e60kmhnb" path="res://components/popups/bill_popup_ui.gd" id="2_2jqea"]

[sub_resource type="Gradient" id="Gradient_2jqea"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5t0q5"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eog2v"]
seamless = true
seamless_blend_skirt = 0.008
color_ramp = SubResource("Gradient_2jqea")
noise = SubResource("FastNoiseLite_5t0q5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5t0q5"]
shader = ExtResource("1_2jqea")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_eog2v")
shader_parameter/bottom_color = Color(4.04298e-06, 0.52603, 0.756903, 1)
shader_parameter/middle_color = Color(1, 0.5, 0, 1)
shader_parameter/top_color = Color(1, 0.03, 0.001, 1)
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_speed = Vector2(0, 0.2)
shader_parameter/fire_aperture = 0.425

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hytj0"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="BillPopupUI" type="Panel"]
material = SubResource("ShaderMaterial_5t0q5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_38tc7")
theme_override_styles/panel = SubResource("StyleBoxFlat_hytj0")
script = ExtResource("2_2jqea")
window_title = "Bill"
default_window_size = Vector2(400, 500)
is_popup = true
window_can_close = false
window_can_minimize = false
window_can_maximize = false
stay_on_top = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 36
text = "Due Today!"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "MUST pay by 11:59 PM"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
mouse_filter = 1

[node name="BillLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 36
text = "Rent: $0,000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PayNowButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = " PAY WITH CASH "

[node name="PayByCreditButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = " PAY WITH CREDIT "

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "*Paying by credit imposes a 30% fee"

[node name="InterestLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "*Paying by credit imposes a 30% fee"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AutopayCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "Autopay Bills"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PayNowButton" to="." method="_on_pay_now_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PayByCreditButton" to="." method="_on_pay_by_credit_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/AutopayCheckBox" to="." method="_on_autopay_check_box_toggled"]
